# intro-to-python

./: .gitignore  .pre-commit-config.yaml  00_intro_00_content.ipynb  00_intro_00_lecture.ipynb  00_intro_01_review.ipynb  00_intro_02_exercises.ipynb  00_start_up.ipynb  00_start_up_00_content.ipynb  00_start_up_10_review.ipynb  00_start_up_20_exercises.ipynb  00_start_up_review_and_exercises.ipynb  01_elements.ipynb  01_elements_00_content.ipynb  01_elements_00_lecture.ipynb  01_elements_01_review.ipynb  01_elements_02_exercises.ipynb  01_elements_10_review.ipynb  01_elements_20_exercises.ipynb  01_elements_of_a_program.ipynb  01_elements_of_a_program_review_and_exercises.ipynb  01_elements_review_and_exercises.ipynb  02_functions.ipynb  02_functions_00_content.ipynb  02_functions_00_lecture.ipynb  02_functions_01_review.ipynb  02_functions_02_exercises.ipynb  02_functions_10_review.ipynb  02_functions_20_exercises.ipynb  02_functions_review_and_exercises.ipynb  03_conditionals.ipynb  03_conditionals_00_content.ipynb  03_conditionals_00_lecture.ipynb  03_conditionals_01_review.ipynb  03_conditionals_02_exercises.ipynb  03_conditionals_10_review.ipynb  03_conditionals_20_exercises.ipynb  03_conditionals_review_and_exercises.ipynb  04_iteration.ipynb  04_iteration_00_content.ipynb  04_iteration_00_lecture.ipynb  (+53 more)
00_intro/: 00_content.ipynb  01_exercises.ipynb  02_review.ipynb
01_elements/: 00_content.ipynb  01_exercises.ipynb  01_exercises_solved.ipynb  02_exercises.ipynb  02_exercises_solved.ipynb  03_content.ipynb  04_exercises.ipynb  04_exercises_solved.ipynb  05_summary.ipynb  06_review.ipynb  07_resources.ipynb
08_mfr/: stream.py  (+9 more)
(+99 files in other folders)
