[tool.poetry]
name = "intro-to-python"
version = "0.7.0"
description = "An introduction to Python and programming for wanna-be data scientists"
authors = ["Alexander Hess <alexander@webartifex.biz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^1.2.6"
numpy = "^1.18.1"
pandas = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
blackcellmagic = "^0.0.2"
jupyter_contrib_nbextensions = "^0.5.1"
RISE = "^5.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
