[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "intro-to-python"
version = "0.1.0.dev0"

authors = ["Alexander Hess <alexander@webartifex.biz>"]
description = "An intro to Python & programming for wanna-be data scientists"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

jupyterlab = "^2.2.8"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]
# Task runners
nox = "^2020.8.22"
pre-commit = "^2.7.1"

# Testing
xdoctest = "^0.15.0"

# Live coding during presentation mode
jupyter-contrib-nbextensions = "^0.5.1"
rise = "^5.6.1"
